[package]
name = "grrs"
version = "0.1.0"
authors = ["Marcelo dos Santos <email@host.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/mdssjc/mds-rust"
repository = "https://github.com/mdssjc/mds-rust"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
failure = "0.1.7"
exitfailure = "0.5.1"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
