[package]
name = "cargo"
version = "1.0.0"
authors = ["Marcelo dos Santos <email@domain.com>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.27.1"
rand = { git = "https://github.com/rust-lang-nursery/rand" }
#bar = { path = "../bar" }
